tests/lang/compile_fail/specialized_method_wrong_type.expo
fn main
  ptr: CPtr<Int32> = CPtr.null()
  cs = ptr.to_cstring()
  print(cs)
end
